# tensorflow-xlogx

./: .gitignore  CMakeLists.txt  README.md  example.py  setup.py
formulas/: formulas.tex
python-src/: __init__.py
src/: example.cc  settings.h  xlogx.cc  xlogx.cu  xlogx_grad_op.cc  xlogx_op.cc  xlogx_op.cu
